--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Java Developer Full-Stack">
+    <meta name="keywords" content="Java Web, Quan Minh Nguyen, Garlicboyyy, HTML, CSS">
+    <meta name="author" content="QuanNM">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quan Minh Nguyen</title>
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Quan Minh Nguyen | CV Webside">
+    <meta property="og:description" content=" Developer Full-Stack">
+    <meta property="og:url" content="https://qmn2802.github.io">
+    <meta property="og:image" content="https://qmn2802.github.io/anhCV.jpg">
+
+
+    <title>Quan Minh Nguyen Resume</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3423e56988.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -77,17 +88,9 @@
             <h1 class="" style="color: white;">About Me</h1>
             <div class="row ">
                 <div class="col col-md-6 about">
-                    <p>Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue
-                        blandit
-                        nunc, eu sollicitudin urna dolor sagittis lacus. Pellentesque posuere. Praesent turpis. Aenean
-                        posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis
-                        lacus.
-                    </p>
-                    <p>Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue
-                        blandit
-                        nunc, eu sollicitudin urna dolor sagittis lacus. Pellentesque posuere. Praesent turpis. Aenean
-                        posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis
-                        lacus.
+                    <p>I'm outgoing, upbeat, and diligent in my work. Joining this company, I aspire to integrate
+                        seamlessly and bring my skills to advance its growth. Aspiring to work as a Software Engineer, I
+                        seek an opportunity to enhance my abilities alongside industry professionals.
                     </p>
 
                 </div>
@@ -136,7 +139,7 @@
                         <div>
                             <h4 style="color: white;">Java</h4>
                         </div>
-                        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100"
+                        <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="200"
                             aria-valuemin="0" aria-valuemax="100">
                             <div class="progress-bar" style="width: 0%"></div>
                             <div class="progress-percent">0%</div>
