--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Quan Minh Nguyen | CV Webside">
     <meta property="og:description" content=" Developer Full-Stack">
+    <meta property="og:site_name" content="Quan Minh Nguyen site_name">
+    <meta property="og:email" content="quan2272@gmail.com">
+    <meta property="og:phone_number" content="0866670280">
     <meta property="og:url" content="https://qmn2802.github.io">
     <meta property="og:image" content="https://qmn2802.github.io/anhCV.jpg">
-
 
     <title>Quan Minh Nguyen Resume</title>
     <link rel="stylesheet" href="style.css">
@@ -57,36 +59,64 @@
 
     <div class="container-fluid" data-bs-spy="scroll" data-bs-target="#navbar">
         <section class="mh-home" id="#mh-home">
+            <div class="row background">
 
-            <div class="cover-image ">
-                <img src="img/VX8xtZ9.jpg" alt="" class="image1">
-                <!-- <div class="avatar"><img src="anhCV.jpg" alt="" class="overlay"></div> -->
+                <div class="col-md-5 avatar">
+                    <img src="img/anhCV.jpg" alt="" class="img-thumbnail ">
+                </div>
 
-                <div class="overlay container-fluid text-center ">
-                    <div class="row align-items-center">
+                <div class="col-md-6 intro-text">
+                    <div class="intro-text-container mb-5">
+                        <h1 class="hello">Hello I'm </h1>
+                        <h1 class="name fw-bold">QUAN MINH NGUYEN</h1>
+                        <div class="d-flex justify-content-between align-items-start">
+                            <h3 class="rolename">Web Developer</h3>
 
-                        <div class="col avatar">
-                            <img src="img/anhCV.jpg" alt="">
-                        </div>
+                            <div class="social-icons">
+                                <a class="" href="https://www.facebook.com/qmn.281">
+                                    <i class="fa-brands fa-square-facebook"></i>
+                                </a>
 
-                        <div class="col text" style="text-align: left;">
-                            <h2>Hello I'm</h2>
-                            <h2>Quan Minh Nguyen</h2>
-                            <p>Developer Full-Stack</p>
-                            <p><i class="fa-solid fa-envelope me-2"></i> <span>quan2272@gmail.com</span></p>
-                            <p><i class="fa-solid fa-phone me-2"></i> <span>0866670280</span></p>
-                            <p><i class="fa-solid fa-location-dot me-2"></i> <span>Hanoi, Vietnam</span></p>
+                                <a href="" class="">
+                                    <i class="fa-brands fa-linkedin"></i>
+                                </a>
+                            </div>
                         </div>
 
                     </div>
+
+                    <div class="contact mt-5 py-3">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <h6 class="title-contact">Location</h6>
+                                <h6 class="contact-detail">Hanoi, Vietnam</h6>
+                            </div>
+
+                            <div class="col-md-4">
+                                <h6 class="title-contact">Phone</h6>
+                                <h6 class="contact-detail">0866670280</h6>
+                            </div>
+
+                            <div class="col-md-4">
+                                <h6 class="title-contact">Email</h6>
+                                <h6 class="contact-detail">quan2272@gmail.com</h6>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- <p><i class="fa-solid fa-envelope me-2"></i> <span>quan2272@gmail.com</span></p> -->
+                    <!-- <p><i class="fa-solid fa-phone me-2"></i> <span>0866670280</span></p>
+                    <p><i class="fa-solid fa-location-dot me-2"></i> <span>Hanoi, Vietnam</span></p> -->
                 </div>
+
             </div>
 
         </section>
 
         <section class="mh-about text-center" id="mh-about">
-            <h1 class="" style="color: white;">About Me</h1>
             <div class="row ">
+                <h1 class="" style="color: white;">About Me</h1>
+
                 <div class="col col-md-6 about">
                     <p>I'm outgoing, upbeat, and diligent in my work. Joining this company, I aspire to integrate
                         seamlessly and bring my skills to advance its growth. Aspiring to work as a Software Engineer, I
